[package]
name = "comdex-token"
version = "0.0.1"
edition = "2018"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw0 = "0.8.0"
cw2 = "0.8.0"
cw20 = "0.8.0"
cw20-base = { version = "0.2.0", features = ["library"]}
cw-storage-plus  = "0.8.0"
cosmwasm-std = "0.16.0"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
#terraswap = { path = "../../packages/terraswap", version = "2.4.1" }

[dev-dependencies]
# we only need to enable this if we use integration tests
cosmwasm-schema = "0.16.0"
cosmwasm-storage = "0.16.0"
